--- a/common/spl/Makefile
+++ b/common/spl/Makefile
@@ -20,7 +20,8 @@ obj-$(CONFIG_$(SPL_TPL_)ONENAND_SUPPORT) += spl_onenand.o
 endif
 obj-$(CONFIG_$(SPL_TPL_)UBI) += spl_ubi.o
 obj-$(CONFIG_$(SPL_TPL_)NET) += spl_net.o
-obj-$(CONFIG_$(SPL_TPL_)MMC) += spl_mmc.o
+obj-$(CONFIG_$(SPL_TPL_)ANY_MMC) += spl_mmc.o
+obj-$(CONFIG_$(SPL_TPL_)MULTI_MMC) += spl_multi_mmc.o
 obj-$(CONFIG_$(SPL_TPL_)ATF) += spl_atf.o
 obj-$(CONFIG_$(SPL_TPL_)OPTEE_IMAGE) += spl_optee.o
 obj-$(CONFIG_$(SPL_TPL_)OPENSBI) += spl_opensbi.o
