--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -25,7 +25,8 @@ CONFIG_TARGET_LUA_VIRT=y
 CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
-CONFIG_SYS_LOAD_ADDR=0x101000000
+CONFIG_LUA_AB=y
+CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
@@ -33,7 +34,6 @@ CONFIG_FIT=y
 CONFIG_SPL_FIT_PRINT=y
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_LOAD_FIT_ADDRESS=0x100200000
-CONFIG_SPL_LOAD_FIT_FULL=y
 CONFIG_SPL_FIT_SOURCE="arch/arm/mach-axera/laguna/spl-fit.its"
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 # CONFIG_BOOTSTD is not set
@@ -52,23 +52,28 @@ CONFIG_AVB_VERIFY=y
 CONFIG_AVB_BUF_ADDR=0x90000000
 CONFIG_AVB_BUF_SIZE=0x100000
 CONFIG_STACKPROTECTOR=y
-CONFIG_ANDROID_AB=y
 CONFIG_SPL_FRAMEWORK_BOARD_INIT_F=y
 CONFIG_SPL_SIZE_LIMIT_SUBTRACT_GD=y
 CONFIG_SPL_SIZE_LIMIT_SUBTRACT_MALLOC=y
 CONFIG_SPL_MAX_SIZE=0x1FE000
 CONFIG_SPL_PAD_TO=0x0
 CONFIG_SPL_HAS_BSS_LINKER_SECTION=y
-CONFIG_SPL_BSS_START_ADDR=0x141BE000
+CONFIG_SPL_BSS_START_ADDR=0x141C0000
 CONFIG_SPL_BSS_MAX_SIZE=0x2000
 CONFIG_SPL_SYS_REPORT_STACK_F_USAGE=y
 CONFIG_SPL_SHOW_ERRORS=y
 CONFIG_SPL_BOARD_INIT=y
 CONFIG_SPL_DM_BOOT_DEVICE=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
-CONFIG_SPL_SYS_MALLOC_SIMPLE=y
+CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
+CONFIG_SPL_LEGACY_IMAGE_CRC_CHECK=y
+CONFIG_SYS_SPL_MALLOC=y
+CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
+CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x101000000
 CONFIG_SPL_DISPLAY_PRINT=y
-# CONFIG_SPL_CRC32 is not set
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
+CONFIG_SPL_MULTI_MMC=y
+CONFIG_SPL_MMC_WRITE=y
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
 CONFIG_SPL_SPI_FLASH_MTD=y
@@ -116,7 +121,6 @@ CONFIG_CMD_POWEROFF=y
 CONFIG_CMD_READ=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_SETEXPR_FMT=y
-CONFIG_CMD_AB_SELECT=y
 CONFIG_CMD_DHCP=y
 CONFIG_BOOTP_MAY_FAIL=y
 CONFIG_BOOTP_DNS2=y
