--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -10,6 +10,7 @@ CONFIG_SYS_TEXT_BASE=0x100200000
 CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
+CONFIG_SPL_DM_SPI=y
 CONFIG_DEFAULT_DEVICE_TREE="laguna-qemu-virt"
 CONFIG_SPL_TEXT_BASE=0x14000000
 CONFIG_SYS_PROMPT="LUA$ "
@@ -19,12 +20,15 @@ CONFIG_SPL_SIZE_LIMIT=0x200000
 CONFIG_SPL_SIZE_LIMIT_PROVIDE_STACK=0x10000
 CONFIG_DEBUG_UART_BASE=0x0E403000
 CONFIG_DEBUG_UART_CLOCK=192000000
+CONFIG_SPL_SPI_FLASH_SUPPORT=y
+CONFIG_SPL_SPI=y
 CONFIG_ARMV8_SPL_EXCEPTION_VECTORS=y
 CONFIG_AXERA_LUA=y
 CONFIG_TARGET_LUA_VIRT=y
 CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
+CONFIG_LUA_MTDPARTS_NOR0="64k(misc),64k(env),64k(vbmeta_a),64k(vbmeta_b),512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
 CONFIG_LUA_AB=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
@@ -74,9 +78,12 @@ CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
 CONFIG_SPL_MULTI_MMC=y
 CONFIG_SPL_MMC_WRITE=y
+CONFIG_SPL_MTD_SUPPORT=y
+CONFIG_SPL_DM_SPI_FLASH=y
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
 CONFIG_SPL_SPI_FLASH_MTD=y
+CONFIG_SPL_SPI_LOAD=y
 CONFIG_SPL_YMODEM_SUPPORT=y
 CONFIG_SPL_ATF=y
 CONFIG_SPL_ATF_LOAD_IMAGE_V2=y
@@ -104,6 +111,7 @@ CONFIG_CMD_SHA1SUM=y
 CONFIG_SHA1SUM_VERIFY=y
 CONFIG_CMD_STRINGS=y
 CONFIG_CMD_BCB=y
+CONFIG_CMD_BOOTCTRL=y
 CONFIG_CMD_BIND=y
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DM=y
