board: lua: Update mtdparts support

--- a/board/axera/common/laguna/Kconfig
+++ b/board/axera/common/laguna/Kconfig
@@ -1,17 +1,28 @@
-config LUA_MTDPARTS_NOR0
-	string "mtd boot partition for nor0"
-	default "64m(u-boot)" if !TFABOOT
+
+config LUA_NOR0
+	bool "SPI NOR Flash Settings for nor0"
 	depends on SYS_MTDPARTS_RUNTIME
 	depends on AXERA_LUA
+	help
+	  This enable settings for first SPI NOR Flash.
+
+config LUA_MTDPARTS_NOR0
+	string "MTD Partitions for nor0"
+	depends on LUA_NOR0
 	help
 	  This define the partition of nor0 used to build mtparts dynamically
-	  for boot from nor0.
+	  for booting.
 
-config LUA_MTDPARTS_NOR1
-	string "mtd boot partition for nor1"
-	default "64m(u-boot-env)" if !TFABOOT
+config LUA_NOR1
+	bool "SPI NOR Flash Settings for nor1"
 	depends on SYS_MTDPARTS_RUNTIME
 	depends on AXERA_LUA
 	help
+	  This enable settings for second SPI NOR Flash.
+
+config LUA_MTDPARTS_NOR1
+	string "MTD Partitions for nor1"
+	depends on LUA_NOR1
+	help
 	  This define the partition of nor1 used to build mtparts dynamically
-	  for boot from nor1.
+	  for booting.
