--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -31,6 +31,7 @@ CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="64k(misc),64k(env),64k(vbmeta_a),64k(vbmeta_b),512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
 CONFIG_LUA_AB=y
+CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
