--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -71,19 +71,21 @@ CONFIG_SPL_SHOW_ERRORS=y
 CONFIG_SPL_BOARD_INIT=y
 CONFIG_SPL_DM_BOOT_DEVICE=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
-CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
 CONFIG_SPL_LEGACY_IMAGE_CRC_CHECK=y
 CONFIG_SYS_SPL_MALLOC=y
 CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
 CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x101000000
 CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
+CONFIG_SPL_ENV_SUPPORT=y
+CONFIG_SPL_SAVEENV=y
 CONFIG_SPL_MULTI_MMC=y
 CONFIG_SPL_MMC_WRITE=y
-CONFIG_SPL_MTD_SUPPORT=y
+CONFIG_SPL_MULTI_MTD=y
 CONFIG_SPL_DM_SPI_FLASH=y
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
+# CONFIG_SPL_SPI_FLASH_TINY is not set
 CONFIG_SPL_SPI_FLASH_MTD=y
 CONFIG_SPL_SPI_LOAD=y
 CONFIG_SPL_YMODEM_SUPPORT=y
@@ -237,6 +239,7 @@ CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_NET=y
 CONFIG_VIRTIO_BLK=y
 CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED=y
+# CONFIG_SPL_USE_TINY_PRINTF is not set
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_LIBAVB=y
 CONFIG_SHA384=y
