arm: lua-virt: Enable nand cmd

--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -127,6 +127,7 @@ CONFIG_CMD_LSBLK=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MMC_SWRITE=y
 CONFIG_CMD_MTD=y
+CONFIG_CMD_NAND=y
 CONFIG_CMD_PART=y
 CONFIG_CMD_PCI=y
 CONFIG_CMD_POWEROFF=y
@@ -199,6 +200,7 @@ CONFIG_MMC_SDHCI_LMT=y
 CONFIG_MTD=y
 CONFIG_DM_MTD=y
 CONFIG_SYS_MTDPARTS_RUNTIME=y
+CONFIG_MTD_RAW_NAND=y
 CONFIG_MTD_SPI_NAND=y
 CONFIG_DM_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
