--- a/arch/arm/mach-axera/laguna/Makefile
+++ b/arch/arm/mach-axera/laguna/Makefile
@@ -3,5 +3,10 @@
 # Copyright (C) 2024 Charleye <wangkart@aliyun.com>
 #
 
-obj-y += common.o laguna.o cpu.o lowlevel.o
-obj-$(CONFIG_SPL_BUILD) += spl.o
+obj-y += common.o lowlevel.o
+
+ifdef CONFIG_SPL_BUILD
+obj-y += spl.o
+else
+obj-y += laguna.o cpu.o
+endif
