laguna: fpga: Fixup compilation failure

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -24,6 +24,8 @@ CONFIG_AXERA_LUA=y
 CONFIG_TARGET_LUA_FPGA=y
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_LOWLEVEL_INIT=y
+CONFIG_LUA_NOR0=y
+CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
 CONFIG_SYS_LOAD_ADDR=0x101000000
 CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
