arm: laguna: add global ctrl region devicetree

--- a/arch/arm/dts/laguna-qemu-virt.dts
+++ b/arch/arm/dts/laguna-qemu-virt.dts
@@ -10,6 +10,7 @@
 #include <dt-bindings/gpio/gpio.h>
 
 #include "laguna-gpios.dtsi"
+#include "laguna-global-ctrl.dtsi"
 / {
 	model = "Laguna Qemu Virtual Platform";
 	compatible = "axera,laguna-virt";
