--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -175,6 +175,8 @@ CONFIG_SPL_DM=y
 CONFIG_SPL_DM_WARN=y
 # CONFIG_DM_DEVICE_REMOVE is not set
 CONFIG_SPL_DM_SEQ_ALIAS=y
+CONFIG_REGMAP=y
+CONFIG_SYSCON=y
 CONFIG_SIMPLE_BUS_CORRECT_RANGE=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_BLOCK_CACHE=y
