--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -31,7 +31,7 @@ CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="64k(misc),64k(env),64k(vbmeta_a),64k(vbmeta_b),512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
 CONFIG_LUA_NAND0=y
-CONFIG_LUA_MTDPARTS_NAND0="4m(uboot)"
+CONFIG_LUA_MTDPARTS_NAND0="256k(uboot)"
 CONFIG_LUA_AB=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
@@ -84,6 +84,7 @@ CONFIG_SPL_SAVEENV=y
 CONFIG_SPL_MULTI_MMC=y
 CONFIG_SPL_MMC_WRITE=y
 CONFIG_SPL_MULTI_MTD=y
+CONFIG_SPL_SPINAND_SUPPORT=y
 CONFIG_SPL_DM_SPI_FLASH=y
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
