laguna-virt: Enable MTD options

--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -31,7 +31,7 @@ CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="64k(misc),64k(env),64k(vbmeta_a),64k(vbmeta_b),512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
 CONFIG_LUA_NAND0=y
-CONFIG_LUA_MTDPARTS_NAND0="256k(uboot)"
+CONFIG_LUA_MTDPARTS_NAND0="64k(misc)ro,64k(env)ro,64k(vbmeta_a)ro,64k(vbmeta_b)ro,512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
 CONFIG_LUA_AB=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
@@ -212,6 +212,8 @@ CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_MT35XU=y
 CONFIG_SPI_FLASH_SST=y
 CONFIG_SPI_FLASH_MTD=y
+CONFIG_DM_MTD_SPI_NOR=y
+CONFIG_SPL_DM_MTD_SPI_NOR=y
 CONFIG_DM_MDIO=y
 CONFIG_DM_ETH_PHY=y
 CONFIG_PHY_GIGE=y
