--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -136,6 +136,7 @@ CONFIG_CMD_PCI=y
 CONFIG_CMD_POWEROFF=y
 CONFIG_CMD_READ=y
 CONFIG_CMD_SPI=y
+CONFIG_CMD_USB=y
 CONFIG_CMD_SETEXPR_FMT=y
 CONFIG_CMD_DHCP=y
 CONFIG_BOOTP_MAY_FAIL=y
@@ -243,6 +244,14 @@ CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
 CONFIG_PL022_SPI=y
+CONFIG_USB=y
+# CONFIG_SPL_DM_USB is not set
+CONFIG_DM_USB_GADGET=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_DWC3=y
+CONFIG_USB_DWC3_GENERIC=y
+CONFIG_USB_STORAGE=y
+CONFIG_USB_GADGET=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_NET=y
