--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -124,6 +124,7 @@ CONFIG_CMD_BCB=y
 CONFIG_CMD_BOOTCTRL=y
 CONFIG_CMD_BIND=y
 CONFIG_CMD_CLK=y
+CONFIG_CMD_DFU=y
 CONFIG_CMD_DM=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_GPT=y
@@ -140,6 +141,7 @@ CONFIG_CMD_POWEROFF=y
 CONFIG_CMD_READ=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_USB=y
+CONFIG_CMD_USB_MASS_STORAGE=y
 CONFIG_CMD_SETEXPR_FMT=y
 CONFIG_CMD_DHCP=y
 CONFIG_BOOTP_MAY_FAIL=y
@@ -192,6 +194,7 @@ CONFIG_DM_BOOTCOUNT=y
 CONFIG_CLK=y
 CONFIG_SPL_CLK=y
 CONFIG_CLK_AXERA=y
+CONFIG_DFU_MMC=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x3090000000
 CONFIG_FASTBOOT_BUF_SIZE=0x10000000
@@ -260,6 +263,7 @@ CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_GENERIC=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_NET=y
