--- a/configs/lua-qemu-safety-virt_defconfig
+++ b/configs/lua-qemu-safety-virt_defconfig
@@ -9,6 +9,10 @@ CONFIG_DEFAULT_DEVICE_TREE="laguna-r5f"
 CONFIG_SYS_PROMPT="Laguna r5f> "
 CONFIG_DEBUG_UART_BASE=0x00602000
 CONFIG_DEBUG_UART_CLOCK=192000000
+CONFIG_LUA_NOR0=y
+CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
+CONFIG_LUA_NOR1=y
+CONFIG_LUA_MTDPARTS_NOR1="4m(uboot)"
 CONFIG_SYS_LOAD_ADDR=0x00200000
 CONFIG_DEBUG_UART=y
 CONFIG_HAS_CUSTOM_SYS_INIT_SP_ADDR=y
@@ -20,6 +24,11 @@ CONFIG_SYS_MAXARGS=32
 CONFIG_SYS_CBSIZE=256
 CONFIG_SYS_PBSIZE=4096
 CONFIG_SYS_BOOTM_LEN=0x3c00000
+CONFIG_CMD_MMC=y
+CONFIG_CMD_MTD=y
+CONFIG_CMD_PART=y
+CONFIG_CMD_READ=y
+CONFIG_CMD_SPI=y
 # CONFIG_CMD_SETEXPR is not set
 CONFIG_CMD_TIME=y
 CONFIG_EFI_PARTITION=y
@@ -27,8 +36,22 @@ CONFIG_OF_EMBED=y
 CONFIG_ENV_OVERWRITE=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_CLK=y
+CONFIG_MTD=y
+CONFIG_DM_MTD=y
+CONFIG_SYS_MTDPARTS_RUNTIME=y
+CONFIG_MTD_SPI_NAND=y
+CONFIG_DM_SPI_FLASH=y
+CONFIG_SPI_FLASH_GIGADEVICE=y
+CONFIG_SPI_FLASH_MACRONIX=y
+CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_MT35XU=y
+CONFIG_SPI_FLASH_WINBOND=y
+CONFIG_SPI_FLASH_MTD=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
+CONFIG_SPI=y
+CONFIG_DM_SPI=y
+CONFIG_DESIGNWARE_SPI=y
 CONFIG_TIMER=y
 CONFIG_CADENCE_TTC_TIMER=y
 # CONFIG_EFI_LOADER is not set
