--- a/arch/arm/dts/laguna-r5f.dts
+++ b/arch/arm/dts/laguna-r5f.dts
@@ -53,6 +53,66 @@
 		#size-cells = <1>;
 		ranges;
 
+		qspi: spi@0051F000 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			compatible ="snps,dwc-ssi-1.01a";
+			reg = <0x0051F000 0x1000>;
+			/* Could possibly go up to 200 MHz */
+			spi-max-frequency = <100000000>;
+			num-cs = <4>;
+			reg-io-width = <4>;
+			u-boot,dm-pre-reloc;
+			u-boot,dm-spl;
+			status = "okay";
+
+			spi-flash@0 {
+				compatible = "jedec,spi-nor";
+				reg = <0>;
+				spi-max-frequency = <50000000>;
+				spi-tx-bus-width = <4>;
+				spi-rx-bus-width = <4>;
+				m25p,fast-read;
+				broken-flash-reset;
+				u-boot,dm-pre-reloc;
+				u-boot,dm-spl;
+			};
+		};
+
+		ospi: spi@0C040000 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			compatible ="snps,dwc-ssi-1.01a";
+			reg = <0x0C040000 0x1000>;
+			/* Could possibly go up to 200 MHz */
+			spi-max-frequency = <100000000>;
+			num-cs = <4>;
+			reg-io-width = <4>;
+			u-boot,dm-pre-reloc;
+			u-boot,dm-spl;
+			status = "okay";
+
+			spi-flash@0 {
+				compatible = "jedec,spi-nor";
+				reg = <0>;
+				spi-max-frequency = <50000000>;
+				spi-tx-bus-width = <4>;
+				spi-rx-bus-width = <4>;
+				m25p,fast-read;
+				broken-flash-reset;
+				u-boot,dm-pre-reloc;
+				u-boot,dm-spl;
+			};
+
+			spi-nand@1 {
+				compatible = "spi-nand";
+				spi-max-frequency = <40000000>;
+				reg = <1>;
+				u-boot,dm-pre-reloc;
+				u-boot,dm-spl;
+			};
+		};
+
 		ttc0: timer@ff110000 {
 			compatible = "cdns,ttc";
 			reg = <0x00657000 0x1000>;
