--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1283,6 +1283,12 @@ config CMD_MTD
 	help
 	  MTD commands support.
 
+config CMD_MTD_MARKBAD
+	bool "mtd markbad"
+	depends on CMD_MTD
+	help
+	  MTD markbad command support.
+
 config CMD_MUX
 	bool "mux"
 	depends on MULTIPLEXER
