--- a/arch/arm/dts/laguna-fpga.dts
+++ b/arch/arm/dts/laguna-fpga.dts
@@ -73,9 +73,7 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 168 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
-			u-boot,dm-pre-reloc;
-			u-boot,dm-spl;
-			status = "disabled";
+			status = "okay";
 		};
 
 		serial3: uart@0E405000 {
@@ -85,9 +83,7 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 169 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
-			u-boot,dm-pre-reloc;
-			u-boot,dm-spl;
-			status = "disabled";
+			status = "okay";
 		};
 
 		serial4: uart@0E410000 {
@@ -97,9 +93,7 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 170 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
-			u-boot,dm-pre-reloc;
-			u-boot,dm-spl;
-			status = "disabled";
+			status = "okay";
 		};
 
 		serial5: uart@0E411000 {
@@ -109,9 +103,7 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
-			u-boot,dm-pre-reloc;
-			u-boot,dm-spl;
-			status = "disabled";
+			status = "okay";
 		};
 	};
 };
