--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -197,7 +197,6 @@ CONFIG_PINCONF=y
 # CONFIG_POWER is not set
 CONFIG_DM_REBOOT_MODE=y
 CONFIG_DM_RESET=y
-CONFIG_BAUDRATE=38400
 CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_CONS_INDEX=2
 CONFIG_SERIAL_RX_BUFFER=y
@@ -205,6 +204,7 @@ CONFIG_SERIAL_SEARCH_ALL=y
 CONFIG_SERIAL_PROBE_ALL=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
+CONFIG_DW_UART_INIT=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
