--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -829,6 +829,13 @@ config FDT_FIXUP_PARTITIONS
 	  using partition info defined in the 'mtdparts' environment
 	  variable.
 
+config SYMBOL_LOOKUP
+	bool "Enable symbol lookup"
+	depends on ARM64
+	help
+	  This enables support for looking up symbol names from addresses. The
+	  primary usecase for this is improved debugging support.
+
 menu "System tables"
 	depends on (!EFI && !SYS_COREBOOT) || (ARM && EFI_LOADER)
 
