--- a/tools/Makefile
+++ b/tools/Makefile
@@ -226,6 +226,8 @@ HOSTCFLAGS_ubsha1.o := -pedantic
 hostprogs-$(CONFIG_ARCH_KIRKWOOD) += kwboot
 hostprogs-$(CONFIG_ARCH_MVEBU) += kwboot
 hostprogs-y += proftool
+HOSTCFLAGS_symbols.o += -DCONFIG_TEXT_BASE=$(CONFIG_SYS_TEXT_BASE)
+hostprogs-$(CONFIG_SYMBOL_LOOKUP) += symbols
 hostprogs-$(CONFIG_STATIC_RELA) += relocate-rela
 hostprogs-$(CONFIG_RISCV) += prelink-riscv
 
