laguna: Enable syscon options

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -25,6 +25,7 @@ CONFIG_TARGET_LUA_FPGA=y
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_CNT_OFFSET=0x1D4
+CONFIG_LUA_PERIPH_CRU=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
 CONFIG_SYS_LOAD_ADDR=0x101000000
@@ -154,6 +155,10 @@ CONFIG_BOOTP_SERVERIP=y
 CONFIG_SPL_DM=y
 CONFIG_SPL_DM_WARN=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
+CONFIG_REGMAP=y
+CONFIG_SPL_REGMAP=y
+CONFIG_SYSCON=y
+CONFIG_SPL_SYSCON=y
 CONFIG_SIMPLE_BUS_CORRECT_RANGE=y
 CONFIG_BOOTCOUNT_LIMIT=y
 CONFIG_DM_BOOTCOUNT=y
@@ -197,6 +202,7 @@ CONFIG_PINCONF=y
 # CONFIG_POWER is not set
 CONFIG_DM_REBOOT_MODE=y
 CONFIG_DM_RESET=y
+CONFIG_RESET_SYSCON=y
 CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_CONS_INDEX=2
 CONFIG_SERIAL_RX_BUFFER=y
