laguna: fpga: Use resets phandle within dts

--- a/arch/arm/dts/laguna-fpga.dts
+++ b/arch/arm/dts/laguna-fpga.dts
@@ -7,7 +7,10 @@
 
 /dts-v1/;
 #include <dt-bindings/interrupt-controller/arm-gic.h>
+#include <dt-bindings/reset/laguna-sysctl.h>
 
+#include "laguna-global-ctrl.dtsi"
+#include "laguna-cru.dtsi"
 / {
 	model = "Laguna FPGA Platform";
 	compatible = "axera,laguna-fpga";
@@ -61,6 +64,9 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 167 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
+			resets = <&periph_sysrst0 LAGUNA_PERI_UART1_PRST>,
+					 <&periph_sysrst0 LAGUNA_PERI_UART1_RST>;
+			reset-names = "prst", "rst";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -73,6 +79,9 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 168 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
+			resets = <&periph_sysrst0 LAGUNA_PERI_UART2_PRST>,
+					 <&periph_sysrst0 LAGUNA_PERI_UART2_RST>;
+			reset-names = "prst", "rst";
 			status = "okay";
 		};
 
@@ -83,6 +92,9 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 169 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
+			resets = <&periph_sysrst0 LAGUNA_PERI_UART3_PRST>,
+					 <&periph_sysrst0 LAGUNA_PERI_UART3_RST>;
+			reset-names = "prst", "rst";
 			status = "okay";
 		};
 
@@ -93,6 +105,9 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 170 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
+			resets = <&periph_sysrst0 LAGUNA_PERI_UART4_PRST>,
+					 <&periph_sysrst0 LAGUNA_PERI_UART4_RST>;
+			reset-names = "prst", "rst";
 			status = "okay";
 		};
 
@@ -103,6 +118,9 @@
 			reg-io-width = <4>;
 			interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
 			clock-frequency = <10000000>;
+			resets = <&periph_sysrst0 LAGUNA_PERI_UART5_PRST>,
+					 <&periph_sysrst0 LAGUNA_PERI_UART5_RST>;
+			reset-names = "prst", "rst";
 			status = "okay";
 		};
 	};
