--- a/arch/arm/dts/laguna-global-ctrl.dtsi
+++ b/arch/arm/dts/laguna-global-ctrl.dtsi
@@ -1,15 +1,17 @@
 /* SPDX-License-Identifier: GPL-2.0+
  *
- * Device Tree Source for each subsystem global ctrl region
+ * Device Tree Source for each subsystem global register region
  *
  * Copyright (C) 2024 Charleye <wangkart@aliyun.com>
  */
 
 / {
-	glb_ctrl {
+	glbctrlreg {
 		compatible = "simple-bus";
 		#address-cells = <2>;
 		#size-cells = <2>;
+		u-boot,dm-pre-reloc;
+		u-boot,dm-spl;
 		ranges;
 
 		common_glb: common-glb@06100000 {
@@ -49,7 +51,19 @@
 			reg = <0x00 0x0E000000 0x00 0x1000>;
 			#address-cells = <1>;
 			#size-cells = <1>;
-			ranges = <0x00 0x00 0x0E000000 0x1000>;
+			u-boot,dm-pre-reloc;
+			u-boot,dm-spl;
+
+			uart_xfer_sel: uart-xfer-sel {
+				compatible = "axera,laguna-sysctl";
+				#syscon-cells = <2>;
+				regmap = <&periph_glb>;
+				offset = <0x2C>;
+				mask = <0x3FF>;
+				field-width = <2>;
+				u-boot,dm-pre-reloc;
+				u-boot,dm-spl;
+			};
 		};
 
 		isp_glb: isp-glb@10000000 {
