--- a/arch/arm/dts/laguna-qemu-virt.dts
+++ b/arch/arm/dts/laguna-qemu-virt.dts
@@ -84,6 +84,8 @@
 			resets = <&periph_sysrst0 LAGUNA_PERI_UART1_PRST>,
 					 <&periph_sysrst0 LAGUNA_PERI_UART1_RST>;
 			reset-names = "prst", "rst";
+			syscons = <&uart_xfer_sel 0 UART_XFER_RS232_2LINE>;
+			syscon-names = "xfersel";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -99,6 +101,8 @@
 			resets = <&periph_sysrst0 LAGUNA_PERI_UART2_PRST>,
 					 <&periph_sysrst0 LAGUNA_PERI_UART2_RST>;
 			reset-names = "prst", "rst";
+			syscons = <&uart_xfer_sel 2 UART_XFER_RS232_2LINE>;
+			syscon-names = "xfersel";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -114,6 +118,8 @@
 			resets = <&periph_sysrst0 LAGUNA_PERI_UART3_PRST>,
 					 <&periph_sysrst0 LAGUNA_PERI_UART3_RST>;
 			reset-names = "prst", "rst";
+			syscons = <&uart_xfer_sel 4 UART_XFER_RS232_2LINE>;
+			syscon-names = "xfersel";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -129,6 +135,8 @@
 			resets = <&periph_sysrst0 LAGUNA_PERI_UART4_PRST>,
 					 <&periph_sysrst0 LAGUNA_PERI_UART4_RST>;
 			reset-names = "prst", "rst";
+			syscons = <&uart_xfer_sel 6 UART_XFER_RS232_2LINE>;
+			syscon-names = "xfersel";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -144,6 +152,8 @@
 			resets = <&periph_sysrst0 LAGUNA_PERI_UART5_PRST>,
 					 <&periph_sysrst0 LAGUNA_PERI_UART5_RST>;
 			reset-names = "prst", "rst";
+			syscons = <&uart_xfer_sel 8 UART_XFER_RS232_2LINE>;
+			syscon-names = "xfersel";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
