--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -187,13 +187,11 @@ CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_MT35XU=y
 CONFIG_SPI_FLASH_SST=y
 CONFIG_SPI_FLASH_MTD=y
+CONFIG_PHY_MARVELL=y
 CONFIG_DM_MDIO=y
-CONFIG_DM_ETH_PHY=y
 CONFIG_PHY_GIGE=y
 CONFIG_DWC_ETH_QOS=y
-CONFIG_DWC_ETH_QOS_LMT=y
-CONFIG_E1000=y
-CONFIG_CMD_E1000=y
+CONFIG_DWC_ETH_QOS_LUA=y
 CONFIG_PCI=y
 CONFIG_PCIE_ECAM_GENERIC=y
 CONFIG_PCI_ENDPOINT=y
@@ -211,6 +209,8 @@ CONFIG_SERIAL_PROBE_ALL=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
 CONFIG_DW_UART_INIT=y
+CONFIG_SOC_LUA=y
+CONFIG_DM_GLBCON=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
