arm: lua-virt: Enable reset and glbcon drivers

--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -232,6 +232,7 @@ CONFIG_DM_REBOOT_MODE=y
 CONFIG_DM_BOOT_DEVICE=y
 CONFIG_DM_BOOT_DEVICE_GPIO=y
 CONFIG_DM_RESET=y
+CONFIG_RESET_SYSCON=y
 CONFIG_BAUDRATE=921600
 CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_CONS_INDEX=2
@@ -240,13 +241,14 @@ CONFIG_SERIAL_SEARCH_ALL=y
 CONFIG_SERIAL_PROBE_ALL=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
+CONFIG_SOC_LUA=y
+CONFIG_DM_GLBCON=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
 CONFIG_PL022_SPI=y
 CONFIG_USB=y
 # CONFIG_SPL_DM_USB is not set
-CONFIG_DM_USB_GADGET=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_GENERIC=y
